# omni-docking-bench

./: .gitignore  CITATION.cff  LICENSE  README.md
.github/workflows/: build.yml
docker/: Dockerfile.jazzy  docker-compose.yml  entrypoint.sh
docs/: EXPERIMENT_ANALYSIS.md  RELEASE_PROCESS.md
libs/double_steering_drive_controller/: CMakeLists.txt  README.md  double_steering_drive_plugin.xml  package.xml
libs/double_steering_drive_controller/include/: .gitkeep
libs/double_steering_drive_controller/lib/: .gitkeep
results/: README.md
src/dsd_bot_description/: CMakeLists.txt  README.md  package.xml
src/dsd_bot_description/dsdbot/rviz/: dsdbot.rviz  dsdbot_view.rviz
src/dsd_bot_description/dsdbot/urdf/: dsdbot.materials.xacro  dsdbot_description.urdf.xacro
src/dsd_control_demo/: CMakeLists.txt  README.md  dsd_control_demo.xml  package.xml
src/dsd_control_demo/bringup/config/: dsdbot_controllers.yaml
src/dsd_control_demo/bringup/launch/: dsdbot.launch.py
src/dsd_control_demo/description/launch/: view_robot.launch.py
src/dsd_control_demo/description/ros2_control/: dsdbot.ros2_control.xacro
src/dsd_control_demo/description/urdf/: dsdbot.urdf.xacro
src/dsd_control_demo/hardware/: dsdbot_system.cpp
src/dsd_control_demo/hardware/include/dsd_control_demo/: dsdbot_system.hpp
src/icros_test_setup/: .gitignore  EXPERIMENT_LOG.md  README.md  package.xml  setup.cfg  setup.py
src/icros_test_setup/config/: experiment_scenarios.yaml  test_experiments.yaml
src/icros_test_setup/docs/: dummy_pgv_node.md  pgv_roi_analysis.md
src/icros_test_setup/icros_test_setup/: dummy_pgv_node.py  experiment_analyzer.py  experiment_runner_node.py  plot_single.py
src/icros_test_setup/launch/: controller_only.launch.py  experiment_dwb.launch.py  experiment_kinematic.launch.py  experiment_mppi.launch.py
src/icros_test_setup/results/: README.md
src/icros_test_setup/results/MPPI_sample/: metrics.csv  params.md  params_snapshot.md  report.txt  summary.csv
src/icros_test_setup/results/MPPI_sample/timeseries/: trial_001.csv  trial_002.csv  trial_003.csv  trial_004.csv  trial_005.csv  trial_006.csv  trial_007.csv  trial_008.csv  trial_009.csv  trial_010.csv  trial_011.csv  trial_012.csv  trial_013.csv  trial_014.csv  trial_015.csv  trial_016.csv  trial_017.csv  trial_018.csv  trial_019.csv  trial_020.csv  trial_021.csv  trial_022.csv  trial_023.csv  trial_024.csv  trial_025.csv  trial_026.csv  trial_027.csv  trial_028.csv  trial_029.csv  trial_030.csv  trial_031.csv  trial_032.csv  trial_033.csv  trial_034.csv  trial_035.csv  trial_036.csv  trial_037.csv  trial_038.csv  trial_039.csv  trial_040.csv  (+104 more)
src/icros_test_setup/results/comparison_sample/: analysis.md  comparison.csv
src/icros_test_setup/results/kinematic_sample/: metrics.csv  params.md  params_snapshot.md  report.txt  summary.csv  summary.csv.bak
src/icros_test_setup/results/kinematic_sample/timeseries/: trial_001.csv  trial_002.csv  trial_003.csv  trial_004.csv  trial_005.csv  trial_006.csv  trial_007.csv  trial_008.csv  trial_009.csv  trial_010.csv  trial_011.csv  trial_012.csv  trial_013.csv  trial_014.csv  trial_015.csv  trial_016.csv  trial_017.csv  trial_018.csv  trial_019.csv  trial_020.csv  trial_021.csv  trial_022.csv  trial_023.csv  trial_024.csv  trial_025.csv  trial_026.csv  trial_027.csv  trial_028.csv  trial_029.csv  trial_030.csv  trial_031.csv  trial_032.csv  trial_033.csv  trial_034.csv  trial_035.csv  trial_036.csv  trial_037.csv  trial_038.csv  trial_039.csv  trial_040.csv  (+104 more)
src/icros_test_setup/scripts/: plot_compare.py  run_plot_compare.sh
src/pgv_guided_controller/: README.md  package.xml  setup.cfg  setup.py
src/pgv_guided_controller/config/: pgv_controller.params.yaml
src/pgv_guided_controller/launch/: pgv_controller.launch.py
src/pgv_guided_controller/pgv_guided_controller/: pgv_controller_node.py
