<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsd_bot_description</name>
  <version>0.1.0</version>
  <description>
    URDF / xacro description of the double-steering-drive omni AMR used in the
    ICROS 2026 precision-docking benchmark.
  </description>
  <maintainer email="sjr9017@khu.ac.kr">Jaerak Son</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
